# postwriter

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
context/: characters.md  premise.md  style-guide.md  themes.md  world.md
scripts/: run_revision.py  test_high_quality.py
site/: index.html  package-lock.json  package.json
site/deploy/: Caddyfile  deploy-server.sh  deploy.sh  setup.sh
site/public/: black-meat-fast-draft.epub  robots.txt  sitemap.xml
site/src/: App.tsx  Reader.tsx  index.css  main.tsx
src/postwriter/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  profiles.py  project.py  types.py
src/postwriter/agents/: __init__.py  architect.py  base.py  branch_profiles.py  chapter_planner.py  character_designer.py  context.py  local_rewriter.py  promise_seeder.py  scene_planner.py  scene_writer.py  style_builder.py
src/postwriter/canon/: __init__.py  events.py  mutations.py  slicer.py  store.py
src/postwriter/cli/: __init__.py  app.py  bootstrap.py  display.py  execution.py
src/postwriter/context/: __init__.py  condenser.py  (+1 more)
tests/: conftest.py  test_branch_comparison.py  test_branch_manager.py  test_canon_store.py  test_checkpoint.py  test_context_loader.py  test_critic_runner.py  test_device_detection.py  test_events.py  test_export.py  test_graph_metrics.py  test_hard_validators.py  test_llm_client.py  test_models.py  test_planning_agents.py  test_profiles.py  test_prompt_loader.py  test_repair_planner.py  test_revision.py  test_scene_writer.py  test_scoring.py  test_soft_critics.py
(+93 files in other folders)
