[project]
name = "postwriter"
version = "0.1.0"
description = "Orchestrated long-form fiction generation system"
readme = "README.md"
authors = [
    { name = "Avram Score", email = "ascore@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "anthropic>=0.40,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "rich>=13.0,<14.0",
    "prompt-toolkit>=3.0,<4.0",
    "networkx>=3.0,<4.0",
    "click>=8.0,<9.0",
]

[project.scripts]
postwriter = "postwriter.cli.app:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "factory-boy>=3.3,<4.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.6,<1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
